getting closer towards solving scroll issue #82. tested on iOS safari 10

--- a/less/app.less
+++ b/less/app.less
@@ -14,7 +14,13 @@
 
 body.modal-open {
     margin-right: 0;
+    // Fix for iOS safari scroll bug
+    // https://github.com/twbs/bootstrap/issues/14839
+    position: fixed;
+    width: 100%;
+    overflow: hidden;
 }
+
 nav, .col-md-12, header, footer {
     padding-left:45px;
     padding-right:45px;
@@ -1569,6 +1575,11 @@ footer {
     }
 
     #myModal {
+
+        // Fix for iOS safari scroll bug
+        // https://github.com/twbs/bootstrap/issues/14839
+        -webkit-overflow-scrolling: auto !important;
+        overflow-y: auto !important;
 
         .modal-dialog {
             width: 100%;
